Fix pointer events on FireFox

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -7,6 +7,7 @@
 
 .hero {
   height: 100vh;
+  pointer-events: none;
 }
 
 .background {
@@ -54,6 +55,7 @@
 
 .message {
   composes: absoluteBottom;
+  pointer-events: all;
   top: 0;
   inset: 0;
   z-index: var(--z-index-message);
